update about me

--- a/index.html
+++ b/index.html
@@ -797,9 +797,9 @@
       // About Me 模块完整介绍（仅在此处展示，Hero 不重复）
       aboutIntro: "Senior Frontend / Full-Stack Engineer with 10+ years of experience building scalable platforms used by millions of users.",
       aboutHighlights: [
-        { icon: "code", text: "Previously at leading tech companies such as Alibaba and Baidu, where I drove the design of company-wide platforms — including design systems, component libraries, and low-code infrastructure." },
-        { icon: "brain", text: "I specialize in simplifying complex problems into clean, scalable solutions and collaborate closely with cross-functional teams to deliver meaningful impact." },
-        { icon: "building-2", text: "Now based in Auckland with full work rights in New Zealand, seeking to contribute to high-performing engineering teams." }
+        { icon: "code", text: "Formerly at Alibaba and Baidu, leading the architecture of company-wide systems including design systems, component libraries, and low-code platforms." },
+        { icon: "brain", text: "Known for translating complex requirements into high-performance, maintainable solutions that accelerate product delivery." },
+        { icon: "building-2", text: "Based in Auckland with full work rights in New Zealand." }
       ],
       acsAssessment: [
         { code: "261212", title: "Web Developer" },
@@ -1091,7 +1091,7 @@
                 <div className="mb-4">
                   <p className="hero-section-label justify-center md:justify-start">
                     <i data-lucide="building-2" className="w-3.5 h-3.5" />
-                    <span>Career Highlights</span>
+                    <span>Selected Experience</span>
                   </p>
                   <div className="hero-previously-pills justify-center md:justify-start">
                     {profileData.experienceList.map((exp, i) => (
@@ -1207,7 +1207,7 @@
                 </div>
 
                 <h4 className="about-subtitle text-sm uppercase tracking-wider mb-2">
-                  Career Highlights
+                  Selected Experience
                 </h4>
                 <div className="flex flex-wrap gap-2 mb-6">
                   {profileData.experienceList.map((exp, i) => (
